Bug 1013689 - In-content pages - Alignment fixes. r=jaws
UltraBlame original commit: 83a57d0b225882cde31f5011398c9dc1303ebca1

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -194,6 +194,10 @@ description > html|a {
   padding-bottom: 0; 
 }
 
+#tabsElement {
+  -moz-margin-end: 4px; 
+}
+
 #encryptionPanel {
   margin-top: 15px;
 }
